fix: scrollbar UI & removed console statments

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -25,8 +25,26 @@
   background: var(--modal-color);
   animation: downEntry 1s forwards cubic-bezier(0.32, 1, 0.23, 1);
   padding: 18px;
-  border-radius: 20px 20px 0 0;
+  border-radius: 5px 5px 0 0;
   overflow-y: scroll;
+  
+}
+
+.modal-content::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 10px 10px 0 0;
+}
+
+.modal-content::-webkit-scrollbar-track {
+  background-color: var(--card-color);
+  border-radius: 10px 10px 0 0;
+}
+
+.modal-content::-webkit-scrollbar-thumb {
+  background-color: rgba(216, 217, 218, 0.562);
+  border-radius: 10px ;
+  width: 5px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 .modal-start-content {
